# siftmem

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  siftmem_append.py  siftmem_build_index.py  siftmem_consolidate.py  siftmem_search.py  siftmem_session_capture.py
.github/workflows/: ci.yml
src/siftmem/: __init__.py  append.py  build_index.py  consolidate.py  doctor.py  init_cmd.py  lib.py  llm.py  search.py  session_capture.py  store.py
tests/: conftest.py  test_core.py
