[project]
name = "siftmem"
version = "0.1.0"
description = "Append-only JSONL memory store with type-aware indexing and BM25 search"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jose Francisco" }]
dependencies = ["rank-bm25>=0.2.2"]

[project.scripts]
siftmem-append = "siftmem.append:main"
siftmem-build-index = "siftmem.build_index:main"
siftmem-search = "siftmem.search:main"
siftmem-consolidate = "siftmem.consolidate:main"
siftmem-capture = "siftmem.session_capture:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
